--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">Anjinho Com Patas</string>
     <string name="action_settings">Settings</string>
     <string name="descobrir_idade">Resultado</string>
+    <string name="numero_nao_digitado">Nenhum número digitado!</string>
+    <string name="desenvolvimento">Em desenvolvimento</string>
+
+    <string name="opc_menu_inicial">Inicial</string>
+    <string name="opc_menu_favoritos">Favoritos</string>
+    <string name="opc_menu_encontre_amigo">Encontre um amigo</string>
+    <string name="opc_menu_ajuda">Ajuda</string>
+    <string name="opc_menu_sair">Sair</string>
 </resources>
