--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="opc_menu_encontre_amigo">Encontre um amigo</string>
     <string name="opc_menu_ajuda">Ajuda</string>
     <string name="opc_menu_sair">Sair</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
