--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Anjinho Com Patas</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configurações</string>
     <string name="descobrir_idade">Resultado</string>
     <string name="numero_nao_digitado">Nenhum número digitado!</string>
     <string name="desenvolvimento">Em desenvolvimento</string>
