--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="label_cadastre_se">Cadastre-se</string>
 
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Senha</string>
