--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="text_idade_cachorro">Digite a idade do seu cachorro, para descobrir quantos anos humanos ele possui!</string>
     <string name="opc_menu_inicial">Inicial</string>
     <string name="opc_menu_favoritos">Favoritos</string>
-    <string name="opc_menu_encontre_amigo">Encontre um amigo</string>
+    <string name="opc_menu_doar_um_amigo">Doar um amigo</string>
     <string name="opc_menu_ajuda">Ajuda</string>
     <string name="opc_menu_sair">Sair</string>
     <string name="opc_menu_entrar">Entrar</string>
